lib_LTLIBRARIES = libmbxmlutilstinyxml.la

INCLUDES = -DTIXML_USE_STL
libmbxmlutilstinyxml_la_SOURCES = tinyxml-src/tinynamespace.cpp \
  tinyxml-src/tinystr.cpp \
  tinyxml-src/tinyxml.cpp \
  tinyxml-src/tinyxmlerror.cpp \
  tinyxml-src/tinyxmlparser.cpp

libmbxmlutilstinyxml_la_HEADERS = tinyxml-src/tinynamespace.h \
  tinyxml-src/tinystr.h \
  tinyxml-src/tinyxml.h

libmbxmlutilstinyxml_ladir = $(includedir)/mbxmlutilstinyxml

EXTRA_DIST = tinyxml-src/readme.txt tinyxml-src/changes.txt
