lib_LTLIBRARIES = libopenmbvcppinterfacetinyxml.la
INCLUDES = -DTIXML_USE_STL
libopenmbvcppinterfacetinyxml_la_SOURCES = tinyxml-src/tinynamespace.cpp \
  tinyxml-src/tinystr.cpp \
  tinyxml-src/tinyxml.cpp \
  tinyxml-src/tinyxmlerror.cpp \
  tinyxml-src/tinyxmlparser.cpp

libopenmbvcppinterfacetinyxml_la_HEADERS = tinyxml-src/tinynamespace.h \
  tinyxml-src/tinystr.h \
  tinyxml-src/tinyxml.h

libopenmbvcppinterfacetinyxml_ladir = $(includedir)/openmbvcppinterfacetinyxml/tinyxml-src

EXTRA_DIST = tinyxml-src/readme.txt tinyxml-src/changes.txt
